--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -131,6 +131,7 @@
       "iAcceptTheGeneral":"I accept the general",
       "ternsCondition":"terms & conditions",
       "andThe":"and the",
-      "privacyPolicy":"privacy policy"
-    
+      "privacyPolicy":"privacy policy",
+      "acceptTermsCondition":"Accept terms & condition",
+      "userNotFound":"User not found"
     }
